--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "embla-carousel-react": "^7.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "immer": "^9.0.21",
     "keen-slider": "^6.8.5",
     "next": "13.2.4",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^11.16.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "use-context-selector": "^1.4.1"
   }
 }
